--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -24,7 +24,7 @@ RUN update-locale lang=en_US.UTF-8 \
 
 WORKDIR /home/container
 
-COPY ./entrypoint.sh /entrypoint.sh
+COPY ./debian/entrypoint.sh /entrypoint.sh
 CMD ["/bin/bash", "/entrypoint.sh"]
 
 ## install rcon
