--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -1,8 +1,7 @@
-FROM quay.io/parkervcp/pterodactyl-images:debian_source
+FROM ghcr.io/matthewpi/images:debian
 USER root
 RUN apt-get update
 RUN apt-get dist-upgrade -y
-RUN apt-get install -y libpulse0 libpulse-dev
+RUN apt-get install -y libpulse0 libpulse-dev libatomic1 libc6
 
-COPY ./debian/entrypoint.sh /entrypoint.sh
 USER container
