--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
@@ -25,4 +25,5 @@ jobs:
         with:
           push: true
           file: debian/Dockerfile
+          context: debian
           tags: ghcr.io/shrptech/pterodactyl-docker-image:debian
