Update debian dockerfile

--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -20,7 +20,7 @@
 # SOFTWARE.
 #
 
-FROM		docker.io/library/debian:stable-slim
+FROM		docker.io/library/debian:bullseye
 
 LABEL		author="Matthew Penner" maintainer="matthew@pterodactyl.io"
 
@@ -28,7 +28,7 @@ LABEL		org.opencontainers.image.source="https://github.com/matthewpi/images"
 LABEL		org.opencontainers.image.licenses=MIT
 
 RUN			apt-get update -y && apt-get upgrade -y && apt-get install -y ca-certificates iproute2 tzdata libpulse-dev libatomic1 libc6 \
-				&& adduser -D -h /home/container container
+				&& useradd -m container
 
 USER		container
 ENV			USER=container HOME=/home/container
